--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "homepage": "https://github.com/andreikhanau/frontend-project-11#readme",
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
     "css-loader": "^7.1.2",
-    "eslint": "^9.12.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.0",
     "postcss-loader": "^8.1.1",
